--- a/mysite.html
+++ b/mysite.html
@@ -1,205 +1,301 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy — Mathset Go (Learners) & Mathset (Teachers)</title>
-  <meta name="description" content="Privacy Policy for Mathset Go (Learners App) and Mathset (Teachers App). This page explains how we collect, use, and protect personal information of learners and teachers using the Mathset apps." />
+
+  <meta charset="UTF-8" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>MathSet Go - Educational App</title>
+
+  <meta name="description" content="MathSet Go helps learners in Grades 8–12 practice math mock exams and helps teachers track learner progress easily.">
+
+  <link rel="icon" type="image/png" href="logo.png">
+
   <style>
-    :root{
-      --bg:#0b1020;--card:#111836;--text:#e9ecf1;--muted:#b7c0d1;--accent:#6ea8fe;--border:#263157;--ok:#35c46b;--warn:#ffce56
+
+    body {
+
+      font-family: 'Arial', sans-serif;
+
+      margin: 0;
+
+      padding: 0;
+
+      scroll-behavior: smooth;
+
+      color: #333;
+
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Inter,Arial,sans-serif;line-height:1.6}
-    a{color:var(--accent);text-decoration:none}
-    a:hover{text-decoration:underline}
-    .container{max-width:980px;margin-inline:auto;padding:24px}
-    header{position:sticky;top:0;background:linear-gradient(180deg,rgba(11,16,32,.98),rgba(11,16,32,.92));backdrop-filter:blur(8px);border-bottom:1px solid var(--border);z-index:100}
-    .header-inner{display:flex;align-items:center;gap:12px;justify-content:space-between;padding:14px 0}
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:36px;height:36px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#9b7bff);display:grid;place-items:center;color:white;font-weight:700}
-    nav a{margin-right:16px;font-weight:600}
-    h1,h2,h3{line-height:1.25}
-    h1{font-size:clamp(28px,3.2vw,40px);margin:24px 0}
-    h2{font-size:clamp(22px,2.6vw,30px);margin:24px 0 12px}
-    h3{font-size:clamp(18px,2.1vw,22px);margin:20px 0 8px}
-    .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:18px}
-    .grid{display:grid;gap:16px}
-    @media(min-width:760px){.grid{grid-template-columns:1fr 1fr}}
-    .muted{color:var(--muted)}
-    .badge{display:inline-block;padding:4px 10px;border-radius:999px;border:1px solid var(--border);font-size:12px;color:var(--muted)}
-    .toc{display:flex;flex-wrap:wrap;gap:10px}
-    .toc a{padding:8px 10px;border:1px solid var(--border);border-radius:10px}
-    .notice{border-left:4px solid var(--accent);padding:10px 12px;background:rgba(110,168,254,.08);border-radius:8px}
-    details{border:1px solid var(--border);border-radius:12px;padding:12px;background:#0f1730}
-    summary{cursor:pointer;font-weight:700}
-    footer{margin-top:40px;border-top:1px dashed var(--border);padding:24px 0;color:var(--muted);font-size:14px}
-    .pill{display:inline-block;padding:2px 8px;border:1px solid var(--border);border-radius:999px;margin-left:6px;font-size:12px;color:var(--muted)}
-    code{background:#0a1128;border:1px solid var(--border);border-radius:6px;padding:1px 6px}
+
+    a { text-decoration: none; color: inherit; }
+
+
+
+    /* Header */
+
+    header {
+
+      background: linear-gradient(135deg, #4A90E2, #50E3C2);
+
+      color: white;
+
+      text-align: center;
+
+      padding: 60px 20px;
+
+    }
+
+    header img {
+
+      width: 120px;
+
+      margin-bottom: 20px;
+
+    }
+
+    header h1 {
+
+      font-size: 2.8em;
+
+      margin: 0;
+
+    }
+
+    header p {
+
+      font-size: 1.2em;
+
+    }
+
+
+
+    /* Section Styles */
+
+    section {
+
+      padding: 60px 20px;
+
+      max-width: 900px;
+
+      margin: auto;
+
+    }
+
+    h2 {
+
+      color: #4A90E2;
+
+      margin-bottom: 20px;
+
+      text-align: center;
+
+    }
+
+    p {
+
+      line-height: 1.6;
+
+      text-align: center;
+
+    }
+
+
+
+    /* Features */
+
+    .features {
+
+      display: flex;
+
+      flex-wrap: wrap;
+
+      justify-content: center;
+
+      gap: 20px;
+
+      margin-top: 40px;
+
+    }
+
+    .card {
+
+      background: white;
+
+      border-radius: 12px;
+
+      padding: 20px;
+
+      width: 250px;
+
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+
+      transition: transform 0.3s;
+
+    }
+
+    .card:hover {
+
+      transform: translateY(-5px);
+
+    }
+
+    .card h3 {
+
+      margin-top: 0;
+
+      color: #333;
+
+    }
+
+    .card p {
+
+      font-size: 0.95em;
+
+      color: #666;
+
+    }
+
+
+
+    /* Footer */
+
+    footer {
+
+      text-align: center;
+
+      padding: 20px;
+
+      font-size: 0.9em;
+
+      color: #555;
+
+      background-color: #f0f3f7;
+
+    }
+
+
+
+    /* Responsive */
+
+    @media(max-width: 768px){
+
+      .features {
+
+        flex-direction: column;
+
+        align-items: center;
+
+      }
+
+    }
+
   </style>
+
 </head>
+
 <body>
+
+
+
   <header>
-    <div class="container header-inner">
-      <div class="brand">
-        <div class="logo" aria-hidden="true">M</div>
-        <div>
-          <div style="font-weight:800">Mathset Privacy Policy</div>
-          <div class="muted" style="font-size:12px">One link for both apps</div>
-        </div>
-      </div>
-      <nav aria-label="Sections">
-        <a href="#overview">Overview</a>
-        <a href="#learners">Learners App</a>
-        <a href="#teachers">Teachers App</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
+
+    <img src="logo.png" alt="MathSet Go Logo">
+
+    <h1>MathSet Go</h1>
+
+    <p>Interactive mock exams for Grades 8–12</p>
+
   </header>
 
-  <main class="container">
-    <section id="overview" class="card">
-      <h1>Privacy Policy</h1>
-      <p class="muted">Effective Date: <strong id="effective-date">21 August 2025</strong></p>
-      <p>Welcome to <strong>Mathset Go</strong> (Learners app) and <strong>Mathset</strong> (Teachers app). This Privacy Policy explains how we collect, use, disclose, and protect information when you use our apps and related services (collectively, the “Services”).</p>
-      <div class="notice">
-        <strong>Scope.</strong> This single page covers both apps. Where something applies to only one app, we label it clearly.
+
+
+  <section id="about">
+
+    <h2>About the App</h2>
+
+    <p>MathSet Go is an educational app that allows learners to practice mock exams created by their teachers. Track performance, learn from mistakes, and improve your math skills.</p>
+
+  </section>
+
+
+
+  <section id="mission" style="background-color: #f0f3f7;">
+
+    <h2>Our Mission</h2>
+
+    <p>To empower learners with easy access to quality math practice and help teachers track progress effortlessly.</p>
+
+  </section>
+
+
+
+  <section id="features">
+
+    <h2>Features & Version</h2>
+
+    <div class="features">
+
+      <div class="card">
+
+        <h3>Grade 8–12 Tests</h3>
+
+        <p>Multiple-choice exams tailored to each grade level.</p>
+
       </div>
-      <h3>At a glance</h3>
-      <div class="toc" aria-label="Quick links">
-        <a href="#learners">Learners App Policy</a>
-        <a href="#teachers">Teachers App Policy</a>
-        <a href="#legal">Legal Bases & Rights</a>
-        <a href="#security">Security</a>
-        <a href="#retention">Data Retention</a>
-        <a href="#children">Children’s Privacy</a>
-        <a href="#changes">Changes to this Policy</a>
-        <a href="#contact">Contact Us</a>
+
+      <div class="card">
+
+        <h3>Performance Tracking</h3>
+
+        <p>Track results and identify areas to improve instantly.</p>
+
       </div>
-    </section>
 
-    <section id="learners" class="card">
-      <h2>Mathset Go (Learners App) <span class="pill">Grades 8–12</span></h2>
-      <p class="muted">Covers learners’ accounts, assessments, results and progress features.</p>
+      <div class="card">
 
-      <h3>Information We Collect</h3>
-      <ul>
-        <li><strong>Account & Profile:</strong> name, surname, grade, class, and email (used as the account identifier).</li>
-        <li><strong>Assessment Data:</strong> test ID, scores and totals, skipped questions, timestamps, time taken, topic-level marks (e.g., Algebra, Geometry), cognitive-level marks (where available), and test type.</li>
-        <li><strong>Connections:</strong> the teacher(s) linked to your account and approval status.</li>
-        <li><strong>Device & Usage:</strong> app interaction data and crash/diagnostics via our service providers (e.g., Google Firebase).</li>
-      </ul>
+        <h3>Teacher Content</h3>
 
-      <h3>How We Use Information</h3>
-      <ul>
-        <li>Provide the Service: enable login, deliver tests, show results and progress visuals.</li>
-        <li>Teacher Visibility: allow connected teacher(s) to view your results to support learning.</li>
-        <li>Improve the App: monitor performance, fix bugs, develop new features and analytics.</li>
-        <li>Safety & Compliance: prevent misuse and comply with legal obligations.</li>
-      </ul>
+        <p>Teachers can create and manage tests easily.</p>
 
-      <h3>Sharing & Disclosure</h3>
-      <ul>
-        <li>With <strong>connected teacher(s)</strong> and authorized school staff to support teaching and learning.</li>
-        <li>With <strong>service providers</strong> that host or process data on our behalf (e.g., Firebase). They are bound by confidentiality and security obligations.</li>
-        <li><strong>No selling</strong> of personal data. We do not rent or trade your information.</li>
-        <li>Legal requirements or to protect rights, safety, and security.</li>
-      </ul>
+      </div>
 
-      <h3 id="children">Children’s Privacy</h3>
-      <p>This app is intended for learners in Grades 8–12. Where required, a parent/guardian or the school should consent to a learner’s use. Parents/guardians may request access or deletion of a learner’s data via the contact details below.</p>
-    </section>
+      <div class="card">
 
-    <section id="teachers" class="card">
-      <h2>Mathset (Teachers App)</h2>
-      <p class="muted">Covers teachers’ accounts, class management, and assessment creation features.</p>
+        <h3>Version 1.0.0</h3>
 
-      <h3>Information We Collect</h3>
-      <ul>
-        <li><strong>Account & Profile:</strong> name, surname, school, and email (used as the account identifier).</li>
-        <li><strong>Teaching Data:</strong> classes, connected learners, tests created, and related performance statistics.</li>
-        <li><strong>Device & Usage:</strong> app diagnostics and interaction data via our service providers (e.g., Firebase).</li>
-      </ul>
+        <p>Current stable release with full basic features.</p>
 
-      <h3>How We Use Information</h3>
-      <ul>
-        <li>Provide the Service: enable login, test creation, learner monitoring, and analytics.</li>
-        <li>Collaboration: connect teachers and learners within the same school context.</li>
-        <li>Improve the App: ensure reliability, enhance features, and develop educational insights.</li>
-        <li>Safety & Compliance: prevent misuse and comply with legal obligations.</li>
-      </ul>
+      </div>
 
-      <h3>Sharing & Disclosure</h3>
-      <ul>
-        <li>With connected learners and authorized school staff as required for learning activities.</li>
-        <li>With service providers that host or process data on our behalf (e.g., Firebase). No selling of personal data.</li>
-        <li>Legal requirements or to protect rights, safety, and security.</li>
-      </ul>
-    </section>
+    </div>
 
-    <section id="security" class="card">
-      <h2>Security</h2>
-      <p>We use appropriate technical and organizational measures to protect information, including secure hosting (e.g., Google Firebase), access controls, and encrypted transport (HTTPS). No method of storage or transmission is 100% secure, but we continually work to safeguard your data.</p>
-      <details>
-        <summary>Additional security notes</summary>
-        <ul>
-          <li>Role-based access for teachers and learners.</li>
-          <li>Limited access to production data by authorized personnel only.</li>
-          <li>Routine monitoring and logging for reliability and abuse prevention.</li>
-        </ul>
-      </details>
-    </section>
+  </section>
 
-    <section id="retention" class="card">
-      <h2>Data Retention</h2>
-      <p>We keep personal data only as long as necessary to provide the Services and for legitimate educational or legal purposes. When accounts are deleted or become inactive for an extended period, we will delete or de-identify data within a reasonable time, subject to legal or school policy requirements.</p>
-    </section>
 
-    <section id="legal" class="card">
-      <h2>Legal Bases & Rights</h2>
-      <p>This section summarizes key privacy frameworks that may apply, including South Africa’s <strong>POPIA</strong> and, where relevant, the <strong>GDPR</strong>.</p>
-      <ul>
-        <li><strong>Legal bases:</strong> consent (where required), contract (to provide the Services), legitimate interests (to improve and secure the apps), and legal obligations.</li>
-        <li><strong>Your rights:</strong> where applicable, you may request access, correction, deletion, restriction, objection to certain processing, and data portability.</li>
-        <li><strong>How to exercise rights:</strong> contact us using the details below. We may ask for verification to protect your account.</li>
-      </ul>
-      <p><em>International transfers:</em> If data is processed outside your country, we rely on appropriate safeguards (e.g., contractual protections) to protect your information.</p>
-    </section>
 
-    <section class="card">
-      <h2>Your Choices</h2>
-      <ul>
-        <li><strong>Access & Update:</strong> you can update certain profile information in the app or by contacting us.</li>
-        <li><strong>Account Deletion:</strong> learners may request deletion via their teacher or by contacting us; teachers can request deletion directly. We will act within a reasonable period, subject to legal retention requirements.</li>
-        <li><strong>Cookies/Tracking:</strong> our mobile apps generally do not use browser cookies; however, analytics and diagnostics SDKs may collect usage information as described above.</li>
-      </ul>
-    </section>
+  <section id="contact" style="background-color: #f0f3f7;">
 
-    <section id="changes" class="card">
-      <h2>Changes to This Policy</h2>
-      <p>We may update this Privacy Policy from time to time. If we make material changes, we will notify users in the app or by other appropriate means. The “Effective Date” will reflect the latest version.</p>
-    </section>
+    <h2>Contact</h2>
 
-    <section id="contact" class="card">
-      <h2>Contact Us</h2>
-      <p>If you have questions or requests about privacy, data, or this policy, please contact us:</p>
-      <ul>
-        <li>Email: <strong>Mathsetza@gmail.com</strong></li>
-        <li>Responsible party (operator): <strong>Mathset</strong> (South Africa)</li>
-        
-      </ul>
-    </section>
+    <p>Email: <a href="mailto:support@mathsetgo.com">support@mathsetgo.com</a></p>
 
-   
+    <p>Website: <a href="https://www.mathsetgo.com">www.mathsetgo.com</a></p>
 
-    <footer>
-      <div>© <span id="year"></span> Mathset. All rights reserved.</div>
-    </footer>
-  </main>
+  </section>
 
-  <script>
-    // Helper: set current year in footer if not edited
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+
+
+  <footer>
+
+    &copy; 2025 MathSet Go. All rights reserved.
+
+  </footer>
+
+
+
 </body>
+
 </html>
